--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-<!-- esta es la barra de navegacion -->
+<!-- esta es la barra de navegacion n -->
 <nav class="bg-blue-600 border-gray-200 dark:bg-gray-900">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <!-- este enlace lleva a que en la palabra y el logo la imagen CLub de leones se redirecione a su whartzap -->
