Clinica Historial Controlador del historial terminado falta terminar el formulario de la vista

--- a/src/main/resources/templates/cuerpoWeb/formularioHistorial.html
+++ b/src/main/resources/templates/cuerpoWeb/formularioHistorial.html
@@ -34,6 +34,74 @@
     </div>
 </nav>
 <!-- FIN BARRA -->
+<!--INicio formulario -->
+<div>
+    <h1>Formulario Historial Clinico</h1>
+    <form>
+        <div>
+            <label>Nombres:</label>
+            <input type="text">
+            <br>
+            <span>Error en los Nombres Ingresados</span>
+        </div>
+        <div>
+            <label>Contraseña:</label>
+            <input type="password">
+            <br>
+            <span>Error en la Contraseña Ingresada</span>
+        </div>
+        <div>
+            <label>Correo:</label>
+            <input type="email">
+            <br>
+            <span>Error en el Correo Ingresado</span>
+        </div>
+        <div>
+            <label>Telefono:</label>
+            <input type="text">
+            <br>
+            <span>Error en telefono Ingresado</span>
+        </div>
+        <div>
+            <label>Domicilio:</label>
+            <textarea rows="5" cols="225"></textarea>
+            <br>
+            <span>Error en el Domicilio Ingresado</span>
+        </div>
+        <div>
+            <label>Genero:</label>
+            <!-- radio es para seleccionar un recuadro -->
+            <input type="radio" value="Masculino">Masculino
+            <input type="radio" value="Femenino">Femenino
+            <br>
+            <span>Error en el Género seleccionado</span>
+        </div>
+        <div>
+            <label>Fecha de nacimiento:</label>
+            <input type="date">
+            <br>
+            <span>Error en la fecha de nacimiento Ingresada</span>
+        </div>
+        <div>
+            <label>Tipo de Sangre:</label>
+            <select>
+                <option></option>
+            </select>
+            <br>
+            <span>Error no selecciono ninguno</span>
+        </div>
+        <div>
+            <label>Presenta Alergias?:</label>
+            <input type="checkbox">
+            <br>
+            <span>Error no selecciono</span>
+        </div>
+
+    </form>
+</div>
+
+
+<!-- FIn formulario -->
 
 <footer class="bg-white rounded-lg shadow-sm m-4 dark:bg-gray-800">
     <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
