Clinica Historial FOrmulario echo el formato sin estilo ni puesto el tymeleaf th

--- a/src/main/resources/templates/cuerpoWeb/formularioHistorial.html
+++ b/src/main/resources/templates/cuerpoWeb/formularioHistorial.html
@@ -74,7 +74,7 @@
             <input type="radio" value="Masculino">Masculino
             <input type="radio" value="Femenino">Femenino
             <br>
-            <span>Error en el Género seleccionado</span>
+            <span>Error en el Género seleccionad</span>
         </div>
         <div>
             <label>Fecha de nacimiento:</label>
